# FixMS

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  python-app.yml  test.yml
docs/: conf.py  index.rst  requirements.txt
fixms/: fix_ms.py  fix_ms_corrs.py  fix_ms_dir.py  logger.py
tests/: test_fix_ms_corrs.py
tests/scienceData.RACS_0012+00.SB45305.RACS_0012+00.beam00_averaged_cal.leakage.ms/: table.info  table.mf
tests/scienceData.RACS_0012+00.SB45305.RACS_0012+00.beam00_averaged_cal.leakage.ms/ANTENNA/: table.f0
tests/scienceData.RACS_0012+00.SB45305.RACS_0012+00.beam00_averaged_cal.leakage.ms/ASKAP_METADATA/: fieldlist-2022-10-29_141158_0.txt  footprintOutput-sb45305-RACS_0012+00.txt  mslist-2022-10-29_141158_0.txt  schedblock-info-45256.txt  schedblock-info-45305.txt
tests/scienceData.RACS_0012+00.SB45305.RACS_0012+00.beam00_averaged_cal.leakage.ms/DATA_DESCRIPTION/: table.f0
tests/scienceData.RACS_0012+00.SB45305.RACS_0012+00.beam00_averaged_cal.leakage.ms/FEED/: table.f0  table.f0i
tests/scienceData.RACS_0012+00.SB45305.RACS_0012+00.beam00_averaged_cal.leakage.ms/FIELD/: table.f0  table.f0i
tests/scienceData.RACS_0012+00.SB45305.RACS_0012+00.beam00_averaged_cal.leakage.ms/FLAG_CMD/: table.f0
tests/scienceData.RACS_0012+00.SB45305.RACS_0012+00.beam00_averaged_cal.leakage.ms/HISTORY/: table.f0
tests/scienceData.RACS_0012+00.SB45305.RACS_0012+00.beam00_averaged_cal.leakage.ms/OBSERVATION/: table.f0
tests/scienceData.RACS_0012+00.SB45305.RACS_0012+00.beam00_averaged_cal.leakage.ms/POINTING/: table.f0  table.f0i  table.f1
tests/scienceData.RACS_0012+00.SB45305.RACS_0012+00.beam00_averaged_cal.leakage.ms/POLARIZATION/: table.f0
tests/scienceData.RACS_0012+00.SB45305.RACS_0012+00.beam00_averaged_cal.leakage.ms/PROCESSOR/: table.f0
tests/scienceData.RACS_0012+00.SB45305.RACS_0012+00.beam00_averaged_cal.leakage.ms/SPECTRAL_WINDOW/: table.f0
tests/scienceData.RACS_0012+00.SB45305.RACS_0012+00.beam00_averaged_cal.leakage.ms/STATE/: table.f0
tests/scienceData_SB13671_RACS_1237+00A.beam00_averaged_cal.ms/: table.f0  table.f1  table.f2  table.f2_TSM1  table.f3  table.f3_TSM1  table.f4  table.f4_TSM1  table.info
tests/scienceData_SB13671_RACS_1237+00A.beam00_averaged_cal.ms/ANTENNA/: table.f0
tests/scienceData_SB13671_RACS_1237+00A.beam00_averaged_cal.ms/FEED/: table.f0  table.f0i
tests/scienceData_SB13671_RACS_1237+00A.beam00_averaged_cal.ms/FIELD/: table.f0  table.f0i
tests/scienceData_SB13671_RACS_1237+00A.beam00_averaged_cal.ms/OBSERVATION/: table.f0
tests/scienceData_SB13671_RACS_1237+00A.beam00_averaged_cal.ms/POINTING/: table.f0  table.f0i  table.f1
tests/scienceData_SB13671_RACS_1237+00A.beam00_averaged_cal.ms/SPECTRAL_WINDOW/: table.f0  table.f0i
